# automated-tyre-defect-detection

./: .gitignore  Makefile  pyproject.toml  requirements.txt
notebooks/: testing_layers.ipynb
src/feature_pipeline/: data_extraction.py  data_preparation.py  data_sourcing.py  preprocessing.py  training_data.py
src/setup/: config.py  paths.py
src/training_pipeline/: hyperparameter_tuning.py  model.py  models.py  pretrained_models.py  resnet.py  toy_models.py  training.py
src/training_pipeline/scratch/: models.py
